# emacs-straight-renovate

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  tox.ini
straight/: cli.py  cmd.py  entry.py  gen.py  lock.py  log.py  renovate.py  repo.py  rnv.py  stat.py  straight.py
tests/: test_entry.py  test_renovate.py  test_straight.py
