[project]
name = "emacs-straight-renovate"
version = "0.1.2"
description = "Applying Renovate to `straight-default.el` in Emacs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.18.1",
    "ruff>=0.13.0",
    "tox>=4.30.2",
]

[project.scripts]
straight = "straight.cli:main"

[tool.uv]
package = true

[tool.ruff]
exclude = [
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".mypy_cache",
  ".pytype",
  ".ruff_cache",
  ".tox",
  "__pypackages__",
  "_build",
  "build",
  "dist",
  ".ropeproject",
  ".pytest_cache",
  "__pycache__",
  ".coverage",
]
line-length = 120

[tool.ruff.lint]
select = [
  "F", # pyflakes
  "I", # isort
  "E", # pydocstyle
  "D",
  "W",
]
ignore = [
  "D100",
  "D101",
  "D102",
  "D104", # Missing docstring in public package
  "D107",
  "D203",
  "D212",
]
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"**/{tests,doc}/*" = ["D"]
"straight/cli.py" = ["E501"]

[tool.mypy]
ignore_missing_imports = true
show_error_context = true
show_column_numbers = true
pretty = true

[tool.black]
line-length = 120
