[project]
name = "emacs-straight-renovate"
version = "0.4.0"
description = "Applying Renovate to `straight-default.el` in Emacs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "black==25.12.0",
    "mypy==1.19.1",
    "ruff==0.15.0",
    "tox==4.34.1",
]

[project.scripts]
straight = "straight.cli:main"

[tool.uv]
package = true

[tool.ruff]
exclude = [
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".mypy_cache",
  ".pytype",
  ".ruff_cache",
  ".tox",
  "__pypackages__",
  "_build",
  "build",
  "dist",
  ".ropeproject",
  ".pytest_cache",
  "__pycache__",
  ".coverage",
]
line-length = 120

[tool.ruff.lint]
select = [
  "F", # pyflakes
  "I", # isort
  "E", # pydocstyle
  "D",
  "W",
]
ignore = [
  "D100",
  "D101",
  "D102",
  "D104", # Missing docstring in public package
  "D105", # Missing docstring in magic method
  "D107",
  "D203",
  "D212",
]
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"**/{tests,doc}/*" = ["D"]
"straight/cli.py" = ["E501"]

[tool.mypy]
ignore_missing_imports = true
show_error_context = true
show_column_numbers = true
pretty = true

[tool.black]
line-length = 120
